# GreenAI

./: .env.example  .gitignore  HOW_TO_USE_GREENAI.md  PHASE0_FIX_LOG.md  README.md  TEST_PHASE0.md  alembic.ini  backend_test.py  docker-compose.yml  test_result.md
.emergent/: emergent.yml  summary.txt
backend/: requirements.txt  server.py
backend/app/: __init__.py  main.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.next/: app-build-manifest.json  build-manifest.json  trace
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ApiKeyCard.tsx  AppShell.tsx  AppSidebar.tsx  AppTopbar.tsx  DataTable.tsx  EmptyState.tsx  Logo.tsx  Providers.tsx  RunDetailDrawer.tsx  RunFilters.tsx  RunList.tsx  RunStatusBadge.tsx  SectionHeader.tsx  StatCard.tsx  ThemeToggle.tsx  TopNav.tsx
frontend/hooks/: useAuth.tsx
frontend/lib/: api.ts  supabase.ts  utils.ts
frontend/theme/: theme.ts
memory/: PRD.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_init.py  0001_supabase_tenant_core.py  0002_add_region_preference.py  0003_phase0_alignment.py  0004_org_defaults.py  0005_phase1_job_runs.py  0006_phase2_features.py  0007_make_report_s3path_nullable.py  0008_phase3_audit_and_rate_limit.py  173900bf0502_merge_heads.py
sdk/: pyproject.toml
sdk/greenai_sdk/: __init__.py  carbon.py  cli.py  config.py  hardware.py  telemetry.py  tracker.py
services/backend/: Dockerfile
services/cli/: Dockerfile
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json
(+365 files in other folders)
